<resources>
    <string name="app_name">White Bikes</string>
    <string name="title_activity_maps">WhiteBikes</string>
    <string name="title_activity_stand">StandActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>
    <string name="action_settings">Settings</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">Whitebikes requires location permission to enable geolocation functionality. If the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Whitebike\'.</string>
    <string name="permission_required_toast">Location permission is required for this functionality.</string>


    <string name="available_bikes">Available bikes:</string>
    <string name="bike_number">Bike %s</string>
    <string name="rent_bike_number">Rent bike %s</string>
    <string name="title_activity_rent_bike">RentBikeActivity</string>
    <string name="open_code">Open code:</string>
    <string name="change_code_to">Change code immediately to:</string>
    <string name="confirm_code_change">Confirm code change</string>
    <string name="change_code_howto">(open, rotate metal part, set new code, rotate metal part back)</string>
    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>
    <string name="ride_history">Ride history</string>
    <string name="profile">Profile</string>
    <string name="log_in">Log in</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="errorInvalidCredentials">Invalid credentials</string>
    <string name="errorUnableToLogIn">Unable to log in. Try again later please.</string>
    <string name="loginSuccessful">Login succesful</string>
    <string name="logout">Logout</string>
    <string name="user_logged_out">User successfully logged out</string>
    <string name="credit">Credit</string>

    <string name="eur_credit">€ %s</string>
    <string name="rent">Rent</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="return_word">Return</string>
    <string name="closest_stands">Closest stands</string>
    <string name="help">Help</string>
    <string name="search_stand">Search stand</string>
</resources>
