<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--<group android:checkableBehavior="single">-->

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/ride_history" />

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_power_settings_new_black_36dp"
        android:title="@string/logout"/>



    <!--<item-->
        <!--android:id="@+id/sent_mail"-->
        <!--android:checked="false"-->
        <!--android:icon="@drawable/ic_send_black"-->
        <!--android:title="@string/sent_mail_string" />-->

    <!--<item-->
        <!--android:id="@+id/drafts"-->
        <!--android:checked="false"-->
        <!--android:icon="@drawable/ic_drafts_black"-->
        <!--android:title="@string/draft_string" />-->


    <!--<item-->
        <!--android:id="@+id/allmail"-->
        <!--android:checked="false"-->
        <!--android:icon="@drawable/ic_email_black"-->
        <!--android:title="@string/all_mail_string" />-->
    <!--<item-->
        <!--android:id="@+id/trash"-->
        <!--android:checked="false"-->
        <!--android:icon="@drawable/ic_delete_black"-->
        <!--android:title="@string/trash_string" />-->
    <!--<item-->
        <!--android:id="@+id/spam"-->
        <!--android:checked="false"-->
        <!--android:icon="@drawable/ic_error_black"-->
        <!--android:title="@string/spam_string" />-->

<!--</group>-->
</menu>
